--- a/public/assets/custom/css/custom.css
+++ b/public/assets/custom/css/custom.css
@@ -1,41 +1,9 @@
-div#root_index {
-    position: fixed;
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: 100%;
-    height: 100%;
+body.booky-background
+{
     background: #000000 url("../img/book-open-pages-literature-159872.jpg") no-repeat center center;
-    z-index: 0;
 }
-
-div#root_layer {
-    position: fixed;
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-}
-
-#home_title {
-    position: absolute;
-    top: 30%;
-    margin-top: -50px;
-    width: 100%;
-    height: 100px;
-    line-height: 100px;
-}
-
 .presentation-title {
-    font-size: 8em;
+    font-size: 4em;
     font-weight: 700;
     margin: 0;
     color: #FFFFFF;
@@ -47,4 +15,29 @@ div#root_layer {
     background-clip: border-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.masthead {
+    display: table;
+    width: 100%;
+    height: auto;
+    padding: 200px 0;
+}
+
+.masthead .intro-body {
+    display: table-cell;
+    vertical-align: middle
+}
+
+.masthead h3, .masthead p {
+    text-shadow: 0px 0px 1px #000000;
+}
+@media (min-width: 768px) {
+    .masthead {
+        height: 100%;
+        padding: 0
+    }
+    .masthead .intro-body .presentation-title {
+        font-size: 8em;
+    }
 }
