.no-border helper css class

--- a/public/assets/custom/css/custom.css
+++ b/public/assets/custom/css/custom.css
@@ -41,7 +41,7 @@ body.booky-background
         font-size: 8em;
     }
 }
-
+.no-border { border: 0 !important; }
 .fa-2x {
     font-size: 1.5em !important;
 }
