--- a/public/assets/custom/css/custom.css
+++ b/public/assets/custom/css/custom.css
@@ -71,6 +71,9 @@ body.booky-background
 .comment-body h5{font-size: 1.150em;}
 .comment-body h6{font-size: 1.125em;}
 
+a{color: #333333;}
+a:hover.m--font-dark{color: #111111;}
+
 @media (min-width: 576px) {
     .comment-body img{max-width:100%;}
 }
