--- a/public/assets/custom/css/custom.css
+++ b/public/assets/custom/css/custom.css
@@ -93,3 +93,6 @@ a:hover.m--font-dark{color: #111111;}
     .post-body img{max-width:100%;}
     .comment-body img{max-width:50%;}
 }
+
+.shadow-light{text-shadow: #fff 0px 0px 5px;}
+.shadow-dark{text-shadow: #999 0px 0px 5px;}
